[workspace]
members = ["backend"]
resolver = "2"


[profile.release]
lto = true
opt-level = 's'

[workspace.package]
authors = [
    "your name <your@email.com>",
]
edition = "2024"

[workspace.dependencies]
ft-sdk = { version = "0.4.1", features = ["sqlite-default", "auth-provider", "field-extractors"] }
serde_json = "1"
